--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -83,7 +83,7 @@
             <p>Dicas para carreira</p>
         </a>
 
-        <a th:href="@{/usuarios}" class="action-card" sec:authorize="hasRole('ADMIN')">
+        <a th:href="@{/usuario}" class="action-card" sec:authorize="hasRole('ADMIN')">
             <div class="action-icon">👥</div>
             <h3>Usuários</h3>
             <p>Gerencie usuários do sistema</p>
